# ub-g11-krr

./: README.md  practice.pl
practice/: input.txt  practice2.pl
projects/p1/: problem.md
projects/p1/dp-alg/: input.txt  input2.txt  main.pl  output.txt
projects/p1/resolution/: input.txt  input2.txt  input3.txt  input4.txt  main.pl  output.txt  output2.txt  test.txt
projects/p2/a1/: config.txt  input.txt  io.pl  main.pl  utils.pl
projects/p2/a2/: config.txt  degree.txt  input.txt  io.pl  main.pl  utils.pl
temp/: main.ipynb  pyproject.toml
